--- a/supsi-atc/src/app/students/student-detail/student-detail.component.html
+++ b/supsi-atc/src/app/students/student-detail/student-detail.component.html
@@ -271,10 +271,24 @@
   <div class="btn-group" id="buttonGroup">
     <button (click)="updateStudent()" type="submit" class="btn btn-outline-success" id="saveButton">Salva</button>
     <button (click)="deleteStudent()" type="button" class="btn btn-outline-danger" id="deleteButton">Elimina</button>
+    <button (click)="showCertifications()" type="button" class="btn btn-outline-info" id="CertificationButton">Certificationi</button>
     <div class="col material-icons" id="printIcon" (click)="printDetail()">print</div>
-   
-   
   </div>
-</div>
+  
+  <table class="table" *ngIf="isCertificationVisible">
+    <thead>
+      <tr>
+        <th scope="col">Module Name</th>
+        <th scope="col">Grade</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let c of certification">
+        <td>{{c.name}}</td>
+        <td>{{c.grade}}</td>
+      </tr>
+    </tbody>
+  </table>
+  
 
 <app-loading *ngIf="loading"></app-loading>
