--- a/supsi-atc/src/app/login/login.component.html
+++ b/supsi-atc/src/app/login/login.component.html
@@ -1,8 +1,9 @@
 <br>
-<div class="col-sm-12 my-auto">
-  <div class="container bg-light">
+<div class="col-sm-12 my-auto ">
+  <div class="container bg-light rounded">
     <br>
-    <form class="form-signin">
+    <form class="form-signin  ">
+      <h1>Login</h1>
       <div class="form-label-group">
         <label for="email">Email</label>
         <input [(ngModel)]='user.username' id="email" type="email" class="form-control" placeholder="Enter Email"
