--- a/supsi-atc/src/app/navbar/navbar.component.css
+++ b/supsi-atc/src/app/navbar/navbar.component.css
@@ -71,7 +71,7 @@
 }
 
 #navbar-content-items a:hover {
-  background-color: #d8d8d860;
+  background-color: #5386c0d7 !important;;
 }
 
 #navbar-content-items .active {
