--- a/supsi-atc/src/app/register/register.component.html
+++ b/supsi-atc/src/app/register/register.component.html
@@ -1,6 +1,7 @@
 <br>
 <div class="col-sm-12 my-auto">
   <div class="container bg-light">
+    <h1>Sing In</h1>
     <form class="form-signin">
       <div class="form-label-group">
         <label for="name">Name</label>
