--- a/supsi-atc/src/app/students/student-list/student-list.component.html
+++ b/supsi-atc/src/app/students/student-list/student-list.component.html
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-md-3 mt-2 text-center">
-    <button routerLink="new" type="button" class="btn btn-secondary">
+    <button routerLink="new" type="button" class="btn" style="background-color: #e3f2fd;">
       Aggiungi Studente
     </button>
     <ul class="list-group mt-3 text-left" *ngIf="students">
