--- a/supsi-atc/src/app/loading/loading.component.css
+++ b/supsi-atc/src/app/loading/loading.component.css
@@ -19,7 +19,7 @@
   .spinner > div {
     width: 18px;
     height: 18px;
-    background-color: #333;
+    background-color: #0676F8;
   
     border-radius: 100%;
     display: inline-block;
