--- a/supsi-atc/src/app/navbar/navbar.component.html
+++ b/supsi-atc/src/app/navbar/navbar.component.html
@@ -1,5 +1,5 @@
-<nav class="navbar navbar-expand-md navbar-dark bg-secondary fixed-left">
-  <div class="navbar-brand text-center" id="navbar-header">
+<nav class="navbar navbar-expand-md fixed-left" style="background-color: #e3f2fd; color:#0676F8;">
+  <div class="navbar-brand text-center rounded" id="navbar-header">
     <img class="img-fluid" src="../../assets/logo-supsi.png">
     <h6>Tiforma Blockchain Version</h6>
   </div>
