--- a/supsi-atc/src/styles.css
+++ b/supsi-atc/src/styles.css
@@ -1,4 +1,4 @@
 @import '~@angular/material/prebuilt-themes/indigo-pink.css';
 body {
-  background-color: #343a40 !important;
+  background-color: #bad0e5 !important;
 }
