--- a/supsi-atc/src/app/navbar/navbar.component.html
+++ b/supsi-atc/src/app/navbar/navbar.component.html
@@ -29,8 +29,9 @@
       <li class="nav-item" *ngIf="isLogged()" (click)="logout()"><a class="nav-link">
         <i class="material-icons">lock_open</i><span>Logout</span></a></li>
       <li class="nav-item" *ngIf="isAdmin()" (click)="router.navigate(['/register']);"><a class="nav-link">
-            <i class="material-icons">check_circle_outline</i><span>Register</span></a></li>
-            
+            <i class="material-icons">check_circle_outline</i><span>Registrazione</span></a></li>
+      <li class="nav-item" *ngIf="isAdmin()" (click)="router.navigate(['/manageuser']);"><a class="nav-link">
+            <i class="material-icons">group</i><span>Gestione Utenti</span></a></li>
       <!--<li class="nav-item align-items-end ml-auto"><a class="nav-link" href="http://localhost:3000/auth/github">
                               <i class="material-icons">lock</i><span>Sign with github</span></a></li>-->
     </ul>
