--- a/supsi-atc/src/app/register/register.component.html
+++ b/supsi-atc/src/app/register/register.component.html
@@ -1,16 +1,16 @@
 <br>
-<div class="col-sm-12 my-auto">
+<div class="col-sm-12 my-auto rounded">
   <div class="container bg-light">
-    <h1>Sing In</h1>
+    <h1>Registrazione</h1>
     <form class="form-signin">
       <div class="form-label-group">
-        <label for="name">Name</label>
-        <input [(ngModel)]='user.name' id="name" type="text" class="form-control" placeholder="Name"
+        <label for="name">Nome</label>
+        <input [(ngModel)]='user.name' id="name" type="text" class="form-control" placeholder="Nome"
           [ngModelOptions]="{standalone: true}">
       </div>
       <div class="form-label-group">
-        <label for="surname">Surname</label>
-        <input [(ngModel)]='user.surname' id="surname" type="text" class="form-control" placeholder="Surname"
+        <label for="surname">Cognome</label>
+        <input [(ngModel)]='user.surname' id="surname" type="text" class="form-control" placeholder="Cognome"
           [ngModelOptions]="{standalone: true}">
       </div>
       <div class="form-label-group">
