--- a/supsi-atc/src/app/students/student-detail/student-detail.component.html
+++ b/supsi-atc/src/app/students/student-detail/student-detail.component.html
@@ -1,6 +1,6 @@
 <div class="bg-light rounded p-3 mt-5" *ngIf="student" id="studentDetail">
   <h1 class="col">{{student.name + " " + student.surname}}</h1>
-  
+
   <div class="form-row ">
     <div class="form-group col-md-6">
       <label for="serialNumber">Numero Matricola</label>
@@ -17,7 +17,8 @@
   <div class="form-row">
     <div class="form-group col-md-6">
       <label for="name">Name</label>
-      <input required [(ngModel)]="studentData.name" value="{{studentData.name}}" type="text" class="form-control" id="name">
+      <input required [(ngModel)]="studentData.name" value="{{studentData.name}}" type="text" class="form-control"
+        id="name">
     </div>
     <div class="form-group col-md-6">
       <label for="surname">Surname</label>
@@ -233,7 +234,8 @@
   <div class="form-row">
     <div class="form-group col-md-6">
       <label for="studyplan">Piano di studi</label>
-      <select [(ngModel)]="studentData.studyPlan" class="form-control select" name="studyplanSelect" id="studyplan"  required>
+      <select [(ngModel)]="studentData.studyPlan" class="form-control select" name="studyplanSelect" id="studyplan"
+        required>
         <option *ngFor="let s of studyplans | keyvalue" [ngValue]="s.value">{{s.key}}</option>
       </select>
     </div>
@@ -244,51 +246,52 @@
       <textarea [(ngModel)]="studentData.comment" class="form-control" id="comment"></textarea>
     </div>
   </div>
-  <div class="form-row">
+  <div class="form-row" id="rowAttachments">
     <div class="form-group col-md-12">
       <label>Allegati</label>
       <div [(ngModel)]="studentData.attachments" id="attachments">
         <div *ngFor="let a of studentData.attachments ">
-            <!--<span class="col material-icons" id="downloadIcon" >cloud_download</span>
-            http://localhost:8080/{{studentData.id}}/Delete/{{a}}-->
-            
-              <div class="btn btn-outline-danger " id="deleteAttachmentButton" (click)="deleteAttachment(a)">Elimina</div>
-              <a href="http://localhost:8080/{{studentData.id}}/Download/{{a}}" download class="col-md-12">{{a}}</a>
-            
-            
-            
-            
-            
-          </div>
-      </div>
-  </div>
-  <div class="form-group">
-      <label for="file">Choose File</label>
-      <input type="file"
-             id="file"
-             (change)="uploadFile($event.target.files)" multiple>
-  </div>
-  <div class="btn-group" id="buttonGroup">
-    <button (click)="updateStudent()" type="submit" class="btn btn-outline-success" id="saveButton">Salva</button>
-    <button (click)="deleteStudent()" type="button" class="btn btn-outline-danger" id="deleteButton">Elimina</button>
-    <button (click)="showCertifications()" type="button" class="btn btn-outline-info" id="CertificationButton">Certificationi</button>
-    <div class="col material-icons" id="printIcon" (click)="printDetail()">print</div>
-  </div>
-  
-  <table class="table" *ngIf="isCertificationVisible">
-    <thead>
-      <tr>
-        <th scope="col">Module Name</th>
-        <th scope="col">Grade</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr *ngFor="let c of certification">
-        <td>{{c.name}}</td>
-        <td>{{c.grade}}</td>
-      </tr>
-    </tbody>
-  </table>
-  
+          <!--<span class="col material-icons" id="downloadIcon" >cloud_download</span>
+            http://localhost:8080/{{studentData.id}}/Delete/{{a}}
+          http://localhost:8080/{{studentData.id}}/Download/{{a}}-->
 
-<app-loading *ngIf="loading"></app-loading>
+          <div class="btn btn-outline-danger " id="deleteAttachmentButton" (click)="deleteAttachment(a)">Elimina</div>
+          <a href="http://localhost:8080/{{studentData.id}}/Download/{{a}}" download class="col-md-12">{{a}}</a>
+
+
+
+
+
+        </div>
+      </div>
+    </div>
+  </div>
+    <div class="form-group" id="formAttachments">
+      <label for="file">Scegli Allegato</label>
+      <input type="file" id="file" (change)="uploadFile($event.target.files)" multiple>
+    </div>
+    <div class="btn-group" id="buttonGroup">
+      <button (click)="updateStudent()" type="submit" class="btn btn-outline-success" id="saveButton">Salva</button>
+      <button (click)="deleteStudent()" type="button" class="btn btn-outline-danger" id="deleteButton">Elimina</button>
+      <button (click)="showCertifications()" type="button" class="btn btn-outline-info"
+        id="CertificationButton">Certificationi</button>
+      <div class="col material-icons" id="printIcon" (click)="printDetail()">print</div>
+    </div>
+
+    <table class="table" *ngIf="isCertificationVisible">
+      <thead>
+        <tr>
+          <th scope="col">Modulo</th>
+          <th scope="col">Voto</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr *ngFor="let c of certification">
+          <td>{{c.name}}</td>
+          <td>{{c.grade}}</td>
+        </tr>
+      </tbody>
+    </table>
+
+
+    <app-loading *ngIf="loading"></app-loading>
